--- a/function.ipynb
+++ b/function.ipynb
@@ -1214,6 +1214,132 @@
     "→ Returns the result of the original function (in this case, it's None because send_money_to_user doesn’t return anything).\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "41d64807",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5, 6]\n",
+    "squared_evens = [x**2 for x in numbers if x % 2 == 0]\n",
+    "print(squared_evens)  # [4, 16, 36]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "12a29798",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ali', 'Zara']\n"
+     ]
+    }
+   ],
+   "source": [
+    "grades = {'Ali': 90, 'Sara': 45, 'Zara': 75}\n",
+    "passed = [name for name, score in grades.items() if score >= 50]\n",
+    "print(passed)  # ['Ali', 'Zara']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "0f059f03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=[]\n",
+    "for i in range(15):\n",
+    "    if i %2==0:\n",
+    "        list.append(i)\n",
+    "print(list)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "a6e79a6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10, 12, 14]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1=[l for l in range(15) if l%2==0]\n",
+    "list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "22ce7e80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Marks of Students:\n",
+      "Ali: 84.33\n",
+      "Sara: 91.67\n",
+      "Ahmed: 75.0\n",
+      "Ayesha: 60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Create a dictionary of students with their marks\n",
+    "students = {\n",
+    "    \"Ali\": [85, 90, 78],\n",
+    "    \"Sara\": [92, 88, 95],\n",
+    "    \"Ahmed\": [70, 75, 80],\n",
+    "    \"Ayesha\": [60, 65, 55]\n",
+    "}\n",
+    "\n",
+    "# Step 2: Define a function to calculate average marks\n",
+    "def calculate_averages(student_dict):\n",
+    "    averages = {}\n",
+    "    for name, marks in student_dict.items():\n",
+    "        average = sum(marks) / len(marks)\n",
+    "        averages[name] = round(average, 2)  # rounded to 2 decimal places\n",
+    "    return averages\n",
+    "\n",
+    "# Step 3: Call the function and print results\n",
+    "avg_results = calculate_averages(students)\n",
+    "print(\"Average Marks of Students:\")\n",
+    "for name, avg in avg_results.items():\n",
+    "    print(f\"{name}: {avg}\")\n"
+   ]
   }
  ],
  "metadata": {
