--- a/function.ipynb
+++ b/function.ipynb
@@ -1340,6 +1340,533 @@
     "for name, avg in avg_results.items():\n",
     "    print(f\"{name}: {avg}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5e0d0cce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Create a dictionary of students with their marks\n",
+    "students = {\n",
+    "    \"Ali\": [85, 90, 78],\n",
+    "    \"Sara\": [92, 88, 95],\n",
+    "    \"Ahmed\": [70, 75, 80],\n",
+    "    \"Ayesha\": [60, 65, 55]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7d67724d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Marks of Students:\n",
+      "Ali: 84.33\n",
+      "Sara: 91.67\n",
+      "Ahmed: 75.0\n",
+      "Ayesha: 60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = {\n",
+    "    \"Ali\": [85, 90, 78],\n",
+    "    \"Sara\": [92, 88, 95],\n",
+    "    \"Ahmed\": [70, 75, 80],\n",
+    "    \"Ayesha\": [60, 65, 55]\n",
+    "}\n",
+    "\n",
+    "def calculate_averages(student_dict):\n",
+    "    return dict(\n",
+    "        map(\n",
+    "            lambda item: (item[0], round(sum(item[1]) / len(item[1]), 2)),\n",
+    "            student_dict.items()\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "averages = calculate_averages(students)\n",
+    "\n",
+    "print(\"Average Marks of Students:\")\n",
+    "for name, avg in averages.items():\n",
+    "    print(f\"{name}: {avg}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e9e0d4b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Create a dictionary of students with their marks\n",
+    "students = {\n",
+    "    \"Ali\": [85, 90, 78],\n",
+    "    \"Sara\": [92, 88, 95],\n",
+    "    \"Ahmed\": [70, 75, 80],\n",
+    "    \"Ayesha\": [60, 65, 55]\n",
+    "}\n",
+    "\n",
+    "# Step 2: Define the function correctly\n",
+    "def cal_avgg(student_dict):\n",
+    "    return dict(\n",
+    "        map(\n",
+    "            lambda item: (item[0], round(sum(item[1]) / len(item[1]), 2)),\n",
+    "            student_dict.items()\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "03316dfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res=cal_avgg(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3b0af747",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ali: 84.33\n",
+      "Sara: 91.67\n",
+      "Ahmed: 75.0\n",
+      "Ayesha: 60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name,avg in res.items():\n",
+    "    print(f\"{name}: {avg}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "48cbef9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiplier(factor):\n",
+    "    return lambda x: x * factor\n",
+    "\n",
+    "double = multiplier(2)\n",
+    "print(double(5))  # Output: 10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bc65c9f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n==0 or n==1:\n",
+    "        return 1\n",
+    "    \n",
+    "    return n*factorial(n-1)\n",
+    "\n",
+    "factorial(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5cff24a",
+   "metadata": {},
+   "source": [
+    "1. Closure Function (Function inside a function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f617cb50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def power_generator(n):\n",
+    "    def power(x):\n",
+    "        return x ** n\n",
+    "    return power\n",
+    "\n",
+    "square = power_generator(2)\n",
+    "cube = power_generator(3)\n",
+    "\n",
+    "print(square(5))  # ➝ 25\n",
+    "print(cube(2))    # ➝ 8\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a1f186",
+   "metadata": {},
+   "source": [
+    "Recursive Function with Memoization (Efficient Fibonacci)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4df66513",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fib(n, memo={}):\n",
+    "    if n in memo:\n",
+    "        return memo[n]\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    memo[n] = fib(n-1, memo) + fib(n-2, memo)\n",
+    "    return memo[n]\n",
+    "\n",
+    "print(fib(10))  # ➝ 55\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2e7f315",
+   "metadata": {},
+   "source": [
+    "Function that accepts another function as argument (Higher-Order Function)\n",
+    "python\n",
+    "Copy code\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7d16e649",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def apply_func(f, values):\n",
+    "    return [f(x) for x in values]\n",
+    "\n",
+    "def square(x):\n",
+    "    return x * x\n",
+    "\n",
+    "print(apply_func(square, [1, 2, 3, 4]))  # ➝ [1, 4, 9, 16]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "91ce07ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deer is running\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def deer(func):\n",
+    "    def wrapper(*args,**kwargs):\n",
+    "        print(\"Deer is running\")\n",
+    "        return func(*args, **kwargs)\n",
+    "    return wrapper\n",
+    "@deer\n",
+    "def add(a,b):\n",
+    "    return a+b\n",
+    "\n",
+    "\n",
+    "add(5,10)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3da3eb83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access denied\n",
+      "Welcome to the admin dashboard\n"
+     ]
+    }
+   ],
+   "source": [
+    "def require_admin(func):\n",
+    "    def wrapper(user):\n",
+    "        if user.get(\"role\") != \"admin\":\n",
+    "            return \"Access denied\"\n",
+    "        return func(user)\n",
+    "    return wrapper\n",
+    "\n",
+    "@require_admin\n",
+    "def view_dashboard(user):\n",
+    "    return \"Welcome to the admin dashboard\"\n",
+    "\n",
+    "user1 = {\"name\": \"Ali\", \"role\": \"user\"}\n",
+    "user2 = {\"name\": \"Admin\", \"role\": \"admin\"}\n",
+    "\n",
+    "print(view_dashboard(user1))  # Access denied\n",
+    "print(view_dashboard(user2))  # Welcome\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5be055ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def memoize(func):\n",
+    "    cache={}\n",
+    "    def wrraper(n):\n",
+    "        if n in cache:\n",
+    "            return cache[n]\n",
+    "        cache[n]=func(n)\n",
+    "        return cache[n]\n",
+    "    return wrraper\n",
+    "\n",
+    "@memoize\n",
+    "def fib(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    return fib(n-1) + fib(n-2)\n",
+    "print(fib(10)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "10fb4713",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "Hello!\n",
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def repeat(time):\n",
+    "    def decorator(func):\n",
+    "        def wrrapper(*args, **kwargs):\n",
+    "            for _ in range(time):\n",
+    "                res=func(*args, **kwargs)\n",
+    "            return res\n",
+    "        return wrrapper\n",
+    "    return decorator\n",
+    "\n",
+    "@repeat(3)\n",
+    "def say_hello():\n",
+    "    print(\"Hello!\")\n",
+    "\n",
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cfaaf497",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slow_function took 1.0013 seconds\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "def timer(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        start = time.time()\n",
+    "        result = func(*args, **kwargs)\n",
+    "        end = time.time()\n",
+    "        print(f\"{func.__name__} took {end - start:.4f} seconds\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "@timer\n",
+    "def slow_function():\n",
+    "    time.sleep(1)\n",
+    "    return \"Done\"\n",
+    "\n",
+    "print(slow_function())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "eed15d9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index 0 and its item is Python\n",
+      "index 1 and its item is Decorator\n",
+      "index 2 and its item is Function\n",
+      "index 3 and its item is Argument\n",
+      "index 4 and its item is Wrapper\n",
+      "index 5 and its item is Return\n",
+      "index 6 and its item is Logging\n",
+      "index 7 and its item is Timer\n",
+      "index 8 and its item is Cache\n",
+      "index 9 and its item is Access\n",
+      "index 10 and its item is Loop\n",
+      "index 11 and its item is Keyword\n",
+      "index 12 and its item is Dictionary\n",
+      "index 13 and its item is Parameter\n",
+      "index 14 and its item is Result\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [\n",
+    "    \"Python\",      # 0\n",
+    "    \"Decorator\",   # 1\n",
+    "    \"Function\",    # 2\n",
+    "    \"Argument\",    # 3\n",
+    "    \"Wrapper\",     # 4\n",
+    "    \"Return\",      # 5\n",
+    "    \"Logging\",     # 6\n",
+    "    \"Timer\",       # 7\n",
+    "    \"Cache\",       # 8\n",
+    "    \"Access\",      # 9\n",
+    "    \"Loop\",        #10\n",
+    "    \"Keyword\",     #11\n",
+    "    \"Dictionary\",  #12\n",
+    "    \"Parameter\",   #13\n",
+    "    \"Result\"       #14\n",
+    "]\n",
+    "\n",
+    "for index,item in enumerate(list):\n",
+    "    print(f\"index {index} and its item is {item}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cab3055b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list = [\n",
+    "    \"Python\",      # 0\n",
+    "    \"Decorator\",   # 1\n",
+    "    \"Function\",    # 2\n",
+    "    \"Argument\",    # 3\n",
+    "    \"Wrapper\",     # 4\n",
+    "    \"Return\",      # 5\n",
+    "    \"Logging\",     # 6\n",
+    "    \"Timer\",       # 7\n",
+    "    \"Cache\",       # 8\n",
+    "    \"Access\",      # 9\n",
+    "    \"Loop\",        #10\n",
+    "    \"Keyword\",     #11\n",
+    "    \"Dictionary\",  #12\n",
+    "    \"Parameter\",   #13\n",
+    "    \"Result\"       #14\n",
+    "]\n",
+    "\n",
+    "def filter_words(list):\n",
+    "    return [list[i] for i in range(len(list))]\n",
+    "\n",
+    "res=filter_words(list)\n",
+    "\n",
+    "print(res)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
