--- a/function.ipynb
+++ b/function.ipynb
@@ -1867,11 +1867,138 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81eabbf0",
+   "metadata": {},
+   "source": [
+    "generator in python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d7465e34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object gen at 0x000001B865B4EF80>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen():\n",
+    "    for i in range(10):\n",
+    "        yield i*i\n",
+    "\n",
+    "next=gen()\n",
+    "print(next)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ade45bf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_up_to(max):\n",
+    "    count=1\n",
+    "    while count<=max:\n",
+    "        yield count\n",
+    "        count +=1\n",
+    "        \n",
+    "        \n",
+    "for number in count_up_to(3):\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03ef868c",
+   "metadata": {},
+   "source": [
+    "Real-World Generator: Reading a Large File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a62c57f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explanation:\n",
+      "def count_up_to(max) defines a generator function.\n",
+      "\n",
+      "yield pauses the function and sends a value back.\n",
+      "\n",
+      "The state of the function is saved until the next call.\n",
+      "\n",
+      "On each for loop iteration, the function resumes after yield.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:8: SyntaxWarning: invalid escape sequence '\\o'\n",
+      "<>:8: SyntaxWarning: invalid escape sequence '\\o'\n",
+      "C:\\Users\\shahb\\AppData\\Local\\Temp\\ipykernel_19692\\1155828043.py:8: SyntaxWarning: invalid escape sequence '\\o'\n",
+      "  for line in read_large_file(\"E:\\opp_practice\\python_oops\\large_log.txt\"):\n"
+     ]
+    }
+   ],
+   "source": [
+    "def read_large_file(file_path):\n",
+    "    with open(file_path,'r') as f:\n",
+    "        for line in f:\n",
+    "            yield line.strip()\n",
+    "            \n",
+    "            \n",
+    "# Usage\n",
+    "for line in read_large_file(\"E:\\opp_practice\\python_oops\\large_log.txt\"):\n",
+    "    print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26bbb19f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_paginated_data(api_func):\n",
+    "    page = 1\n",
+    "    while True:\n",
+    "        data = api_func(page)\n",
+    "        if not data:\n",
+    "            break\n",
+    "        yield from data  # yields each item from the current page\n",
+    "        page += 1\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1885,7 +2012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
