make a online store

--- a/function.ipynb
+++ b/function.ipynb
@@ -1994,6 +1994,365 @@
     "        yield from data  # yields each item from the current page\n",
     "        page += 1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "28f2a370",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even=[]\n",
+    "for number in range(50):\n",
+    "    is_even=number % 2==0\n",
+    "    if is_even:\n",
+    "        even.append(number)\n",
+    "        \n",
+    "print(even)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a338d3de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "even=[x for x in range(50) if x %2==0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f6dc081a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "square = lambda x: x**2\n",
+    "squares = [square(x) for x in range(10)]\n",
+    "print(squares)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "11195283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[x**2 for x in range(5)]\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "673febf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " how are you\n",
+      "['Apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\n",
+    "    \"Apple\",\n",
+    "    \"Banana\",\n",
+    "    \"Orange\",\n",
+    "    \"Mango\",\n",
+    "    \"Grapes\",\n",
+    "    \"Pineapple\",\n",
+    "    \"Strawberry\",\n",
+    "    \"Watermelon\",\n",
+    "    \"Cherry\",\n",
+    "    \"Papaya\"\n",
+    "]\n",
+    "valid_faruit=[]\n",
+    "for fruit in fruits:\n",
+    "    if len(fruit)> 5:\n",
+    "        continue\n",
+    "    if fruit[0]!='A':\n",
+    "        continue\n",
+    "    if fruit[-1] !='P':\n",
+    "        print( ' how are you')\n",
+    "        \n",
+    "    valid_faruit.append(fruit)\n",
+    "    \n",
+    "print(valid_faruit)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fd21a77f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_fruit = [fruit for fruit in fruits if len(fruit) <= 1 and fruit[0] != 'A' and fruit[-1] == 'P']\n",
+    "print(val_fruit)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7f7e45dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "for row in matrix:\n",
+    "    for r in row:\n",
+    "        print(r)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82418110",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "00f65df3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[num for row in matrix for num in row]\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "be4af396",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1, 2, 3], [4, 5, 6]], [[7, 8, 9], [10, 11, 12]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "triple_list = [\n",
+    "    [  # First 2D layer\n",
+    "        [1, 2, 3],\n",
+    "        [4, 5, 6]\n",
+    "    ],\n",
+    "    [  # Second 2D layer\n",
+    "        [7, 8, 9],\n",
+    "        [10, 11, 12]\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "print(triple_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc05744d",
+   "metadata": {},
+   "source": [
+    "triple= [ num for third in triple_list for second in third for num in second]\n",
+    "print(triple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c60b1976",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ ye is main majood h\n"
+     ]
+    }
+   ],
+   "source": [
+    "triple_list = [\n",
+    "    [\n",
+    "        [1, 2, 3],\n",
+    "        [4, 5, 6]\n",
+    "    ],\n",
+    "    [\n",
+    "        [7, 8, 9],\n",
+    "        [10, 11, 12]\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "# Use list comprehension to flatten and filter for 4\n",
+    "found = [num for third in triple_list for second in third for num in second if num == 4]\n",
+    "\n",
+    "if found:\n",
+    "    print(\"✅ ye is main majood h\")\n",
+    "else:\n",
+    "    print(\"❌ ye is main nahi h\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d70c9912",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['even {x}',\n",
+       " 'odd',\n",
+       " 'even {x}',\n",
+       " 'odd',\n",
+       " 'even {x}',\n",
+       " 'odd',\n",
+       " 'even {x}',\n",
+       " 'odd',\n",
+       " 'even {x}',\n",
+       " 'odd',\n",
+       " 'even {x}',\n",
+       " 'odd',\n",
+       " 'even {x}',\n",
+       " 'odd',\n",
+       " 'even {x}',\n",
+       " 'odd',\n",
+       " 'even {x}',\n",
+       " 'odd',\n",
+       " 'even {x}',\n",
+       " 'odd']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "category=[ 'even ' if x %2==0 else 'odd' for x in range(20)\n",
+    "          ]\n",
+    "category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1d654a78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pair=[('a',1),('b',2),('c',3),('d',4),('e',5)]\n",
+    "my_dict={k:v for k,v in pair}\n",
+    "print(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "362116e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 1), ('b', 2), ('c', 3), ('d', 4), ('e', 5)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict=[(k,v) for k,v in pair]\n",
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf40bf17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
