--- a/oop.ipynb
+++ b/oop.ipynb
@@ -359,26 +359,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "6a0e4497",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from abc import ABC, abstractionmethod\n",
-    "\n",
+    "from abc import ABC, abstractmethod\n",
+    "# Abstract base class\n",
     "class BankAccount(ABC):\n",
-    "    def __init__(self,account_number,balance=0):\n",
-    "        self.account_number=account_number\n",
-    "        self.balance=balance\n",
-    "    @abstractmethod   \n",
-    "    def deposit(self,amount):\n",
+    "    def __init__(self, account_holder, balance=0):\n",
+    "        self.account_holder = account_holder\n",
+    "        self.balance = balance\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def deposit(self, amount):\n",
     "        pass\n",
-    "    @abstractmethod  \n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def withdraw(self, amount):\n",
+    "        pass\n",
+    "\n",
     "    def show_balance(self):\n",
-    "         print(f\"{self.account_holder}'s Balance: ${self.balance}\")\n",
+    "        print(f\"{self.account_holder}'s Balance: ${self.balance}\")\n",
+    "\n",
     " \n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "51e90a17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SavingsAccount(BankAccount):\n",
+    "    def __init__(self,account_holder,balance=0):\n",
+    "        super().__init__(account_holder, balance)\n",
+    "        self.interest_rate = 0.03  # 3%\n",
+    "        \n",
+    "    def deposit(self,amount):\n",
+    "        self.balance +=amount +(amount + self.interest_rate)\n",
+    "        print(f\"Deposited ${amount} + interest to SavingsAccount\")\n",
+    "    def withdraw(self, amount):\n",
+    "        if amount > self.balance:\n",
+    "            print('')\n",
+    "            \n",
+    "        else:\n",
+    "            self.balance -=amount\n",
+    "            print(f\"Withdrew ${amount} from SavingsAccount\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b9c52da1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deposited $500 + interest to SavingsAccount\n",
+      "Withdrew $300 from SavingsAccount\n",
+      "Shahbaz's Balance: $1700.03\n",
+      "Deposited $200 to CheckingAccount\n",
+      "Withdrew $900 from CheckingAccount\n",
+      "Zulfiqar's Balance: $-200\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Another concrete class\n",
+    "class CheckingAccount(BankAccount):\n",
+    "    def __init__(self, account_holder, balance=0):\n",
+    "        super().__init__(account_holder, balance)\n",
+    "        self.overdraft_limit = 500\n",
+    "\n",
+    "    def deposit(self, amount):\n",
+    "        self.balance += amount\n",
+    "        print(f\"Deposited ${amount} to CheckingAccount\")\n",
+    "\n",
+    "    def withdraw(self, amount):\n",
+    "        if amount > self.balance + self.overdraft_limit:\n",
+    "            print(\"Withdrawal exceeds overdraft limit\")\n",
+    "        else:\n",
+    "            self.balance -= amount\n",
+    "            print(f\"Withdrew ${amount} from CheckingAccount\")\n",
+    "\n",
+    "# Use the accounts\n",
+    "savings = SavingsAccount(\"Shahbaz\", 1000)\n",
+    "checking = CheckingAccount(\"Zulfiqar\", 500)\n",
+    "\n",
+    "savings.deposit(500)\n",
+    "savings.withdraw(300)\n",
+    "savings.show_balance()\n",
+    "\n",
+    "checking.deposit(200)\n",
+    "checking.withdraw(900)\n",
+    "checking.show_balance()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9a5c10e",
+   "metadata": {},
+   "source": [
+    "What is Encapsulation?\n",
+    "Encapsulation is the practice of hiding internal data and implementation details from outside access, and only exposing what's necessary through methods.\n",
+    "In Python, this is done using:\n",
+    "\n",
+    "self.__private_var → double underscore = private\n",
+    "\n",
+    "self._protected_var → single underscore = protected (convention only)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4101b067",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self,name,marks):\n",
+    "        self.name=name\n",
+    "        self._marks=marks\n",
+    "        \n",
+    "    def update_marks(self,new_marks):\n",
+    "        if self._marks< new_marks:\n",
+    "            self._marks=new_marks\n",
+    "            print(f\"Marks updated to {self._marks}\")\n",
+    "            \n",
+    "    # def get_marks(self):\n",
+    "    #     return self._marks\n",
+    "\n",
+    "\n",
+    "\n",
+    "std=Student('shahbaz',90)\n",
+    "# print(std.get_marks())\n",
+    "print(std._marks)\n",
+    "            \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1e1fce9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ali's salary is 70000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, name, salary):\n",
+    "        self.name = name\n",
+    "        self._salary = salary  # Protected (by convention)\n",
+    "\n",
+    "class Manager(Employee):\n",
+    "    def show_salary(self):\n",
+    "        print(f\"{self.name}'s salary is {self._salary}\")\n",
+    "\n",
+    "m = Manager(\"Ali\", 70000)\n",
+    "m.show_salary()  # Access allowed via subclass\n"
    ]
   }
  ],
